Fix Mega footer checkbox chevron visible on wide screen (fixes #1582)

--- a/src/footer/_mega_footer.scss
+++ b/src/footer/_mega_footer.scss
@@ -262,20 +262,20 @@
 
     &~.mdl-mega-footer--heading:after,
     &~.mdl-mega-footer__heading:after {
-      background-image: none;
+      content: '';
     }
   }
   .mdl-mega-footer--heading-checkbox:checked,
   .mdl-mega-footer__heading-checkbox:checked {
-  &~ul {
-    display: block;
+    &~ul {
+      display: block;
+    }
+  
+    &~.mdl-mega-footer--heading:after,
+    &~.mdl-mega-footer__heading:after {
+      content: '';
+    }
   }
-
-  &~.mdl-mega-footer--heading:after,
-  &~.mdl-mega-footer__heading:after {
-    content: '';
-  }
-}
 }
 
 .mdl-mega-footer--bottom-section,
